--- a/students/2014/zvetkov/2/Makefile
+++ b/students/2014/zvetkov/2/Makefile
@@ -10,9 +10,13 @@ endif
 USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/interpreter_code$(OBJ_SUFF) \
+   $(OBJ)/info$(OBJ_SUFF) \
+   $(OBJ)/context$(OBJ_SUFF) \
+   $(OBJ)/errors$(OBJ_SUFF) \
+   $(OBJ)/translation_utils$(OBJ_SUFF) \
    $(OBJ)/bytecode_generator$(OBJ_SUFF) \
-   $(OBJ)/bytecode_translator$(OBJ_SUFF)
+   $(OBJ)/bytecode_translator$(OBJ_SUFF) \
+   $(OBJ)/bytecode_interpreter$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
