--- a/trunk/students/2014/ovchinnikov/Makefile
+++ b/trunk/students/2014/ovchinnikov/Makefile
@@ -1,5 +1,5 @@
 ROOT   = .
-VM_ROOT = ../../../..
+VM_ROOT = ../../..
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
@@ -7,13 +7,16 @@ else
 JIT_OBJ =
 endif
 
-USER_CFLAGS += -Wno-error -Wall -Wno-unused
+USER_CFLAGS += -std=c++11 -Wno-error -Wall -Wno-unused
 
 USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/ast_printer$(OBJ_SUFF)\
-   $(OBJ)/translator_factory$(OBJ_SUFF)
+   $(OBJ)/translatorfactory$(OBJ_SUFF) \
+   $(OBJ)/astprinter$(OBJ_SUFF) \
+   $(OBJ)/bytecodetranslator$(OBJ_SUFF) \
+   $(OBJ)/bytecodeinterpreter$(OBJ_SUFF) \
+   $(OBJ)/blockscope$(OBJ_SUFF)
 
 
 include $(VM_ROOT)/common.mk
