--- a/trunk/students/2014/kartashov/3/Makefile
+++ b/trunk/students/2014/kartashov/3/Makefile
@@ -4,7 +4,7 @@ TEST_ROOT = $(VM_ROOT)/tests
 
 USER_CFLAGS = -Wno-unused -Wno-c++0x-compat -std=c++11
 
-#OPT=1
+OPT=1
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
