--- a/students/2014/zhirkov/vm/Makefile
+++ b/students/2014/zhirkov/vm/Makefile
@@ -1,6 +1,6 @@
 ROOT   = .
 VM_ROOT = ../../../..
-NO_JIT = 1
+NO_JIT = 0
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
 else
@@ -14,13 +14,18 @@ USER_OBJ = \
    $(OBJ)/ast_printer$(OBJ_SUFF)\
    $(OBJ)/ir/ir$(OBJ_SUFF)\
    $(OBJ)/ir/ir_printer$(OBJ_SUFF)\
+   $(OBJ)/ir/reg_allocator$(OBJ_SUFF)\
+   $(OBJ)/ir/live_analyzer$(OBJ_SUFF)\
    $(OBJ)/ir/transformations/identity$(OBJ_SUFF)\
    $(OBJ)/ir/transformations/substitutions$(OBJ_SUFF)\
    $(OBJ)/ir/transformations/ssa$(OBJ_SUFF)\
    $(OBJ)/ir/transformations/phi_values$(OBJ_SUFF)\
+   $(OBJ)/ir/transformations/reg_spiller$(OBJ_SUFF)\
    $(OBJ)/ir/transformations/typecasts$(OBJ_SUFF)\
+   $(OBJ)/ir/transformations/minimizer$(OBJ_SUFF)\
    $(OBJ)/ir/util$(OBJ_SUFF)\
    $(OBJ)/translator/closure_analyzer$(OBJ_SUFF)\
+   $(OBJ)/translator/machcode_generator$(OBJ_SUFF)\
    $(OBJ)/translator/ssa_utils$(OBJ_SUFF)\
    $(OBJ)/translator/translator$(OBJ_SUFF)\
    $(OBJ)/util$(OBJ_SUFF)
