--- a/students/2016/baidin/Makefile
+++ b/students/2016/baidin/Makefile
@@ -2,7 +2,7 @@ ROOT   = .
 VM_ROOT = ../../..
 TEST_ROOT = $(VM_ROOT)/tests
 
-USER_CFLAGS =
+USER_CFLAGS = -std=c++11
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
@@ -12,8 +12,7 @@ endif
 
 USER_OBJ = \
    $(JIT_OBJ) \
-   $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/translator_impl$(OBJ_SUFF)
+   $(OBJ)/main$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
