--- a/students/2016/charkin/2/Makefile
+++ b/students/2016/charkin/2/Makefile
@@ -1,8 +1,8 @@
 ROOT   = .
-VM_ROOT = ../../..
+VM_ROOT = ../../../..
 TEST_ROOT = $(VM_ROOT)/tests
 
-USER_CFLAGS =
+USER_CFLAGS = -std=c++11
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
@@ -13,7 +13,9 @@ endif
 USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/printer$(OBJ_SUFF)
+   $(OBJ)/MyBytecodeInterpretator$(OBJ_SUFF) \
+   $(OBJ)/MyBytecodeTranslator$(OBJ_SUFF) \
+   $(OBJ)/MyScope$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
