--- a/students/2016/bibaev/translator/Makefile
+++ b/students/2016/bibaev/translator/Makefile
@@ -1,8 +1,8 @@
 ROOT   = .
-VM_ROOT = ../../..
+VM_ROOT = ../../../..
 TEST_ROOT = $(VM_ROOT)/tests
 
-USER_CFLAGS = -std=c++1y
+USER_CFLAGS = -std=c++11
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
@@ -13,18 +13,16 @@ endif
 USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/printer$(OBJ_SUFF)
+   $(OBJ)/my_translator$(OBJ_SUFF) \
+   $(OBJ)/my_interpreter$(OBJ_SUFF) \
+   $(OBJ)/context$(OBJ_SUFF) \
+   $(OBJ)/instruction_util$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
-
-INCLUDE += -I$(ROOT)/include
 
 MATHVM = $(BIN)/mvm
 
 all: $(MATHVM)
 
-test: $(MATHVM) $(TEST_ROOT)
-	($(MATHVM) tests/test.txt $(BIN)/res1.txt && $(MATHVM) $(BIN)/res1.txt $(BIN)/res2.txt && (diff $(BIN)/res1.txt $(BIN)/res2.txt && echo "Success")) || echo "Fail"
-	
 $(MATHVM): $(OUT) $(USER_OBJ) $(MATHVM_OBJ)
 	$(CXX) -o $@ $(USER_OBJ) $(MATHVM_OBJ) $(LIBS)
