--- a/students/2016/serebro/Makefile
+++ b/students/2016/serebro/Makefile
@@ -16,7 +16,9 @@ USER_OBJ = \
    $(OBJ)/formatter$(OBJ_SUFF) \
    $(OBJ)/translator_impl$(OBJ_SUFF) \
    $(OBJ)/bytecode_writer$(OBJ_SUFF) \
-   $(OBJ)/type_deducer$(OBJ_SUFF)
+   $(OBJ)/type_deducer$(OBJ_SUFF) \
+   $(OBJ)/interpreter_impl$(OBJ_SUFF) \
+   $(OBJ)/bytecode_optimizer$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
