--- a/students/2016/yalysheva/Makefile
+++ b/students/2016/yalysheva/Makefile
@@ -16,7 +16,8 @@ USER_OBJ = \
    $(OBJ)/translator$(OBJ_SUFF)\
    $(OBJ)/translator_impl$(OBJ_SUFF)\
    $(OBJ)/PrintTranslatorImpl$(OBJ_SUFF)\
-   $(OBJ)/BytecodeTranslatorImpl$(OBJ_SUFF)
+   $(OBJ)/BytecodeTranslatorImpl$(OBJ_SUFF)\
+   $(OBJ)/InterpreterCodeImpl$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
