--- a/students/2016/stepanov/2/Makefile
+++ b/students/2016/stepanov/2/Makefile
@@ -3,9 +3,10 @@ VM_ROOT = ../../../..
 # This flag disables JIT dependencies.
 NO_JIT = 0
 # JIT_FLAGS = -DASMJIT_RELEASE
+WITH_SDL = true
 
 
-USER_CFLAGS = -std=c++11 -O2 -lstdc++ -Wl,--no-as-needed -ldl -g $(JIT_FLAGS)
+USER_CFLAGS = -std=c++11 -O2 -lstdc++ -Wl,--no-as-needed -rdynamic -ldl -g  $(JIT_FLAGS)
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
