--- a/students/2016/mordberg/Makefile
+++ b/students/2016/mordberg/Makefile
@@ -14,7 +14,7 @@ USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
    $(OBJ)/translator_impl$(OBJ_SUFF) \
-   $(OBJ)/source_print_translator$(OBJ_SUFF)
+   $(OBJ)/print_translator$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
