--- a/students/2017/simiyutin/1/Makefile
+++ b/students/2017/simiyutin/1/Makefile
@@ -17,7 +17,7 @@ USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
    $(OBJ)/translator_impl$(OBJ_SUFF) \
-   $(OBJ)/ast_printer$(OBJ_SUFF)
+   $(OBJ)/ast_printer_translator$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
