--- a/students/2017/kravtsun/Makefile
+++ b/students/2017/kravtsun/Makefile
@@ -15,12 +15,13 @@ endif
 
 USER_OBJ = \
    $(JIT_OBJ) \
+   $(OBJ)/ast_printer$(OBJ_SUFF) \
+   $(OBJ)/bytecode_impl$(OBJ_SUFF) \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/translator_impl$(OBJ_SUFF)
+   $(OBJ)/translator_impl$(OBJ_SUFF) \
+   $(OBJ)/translator_visitor$(OBJ_SUFF) \
 
 include $(VM_ROOT)/common.mk
-
-INCLUDE += -I$(ROOT)/include
 
 MATHVM = $(BIN)/mvm
 
