--- a/students/2017/begunkov/Makefile
+++ b/students/2017/begunkov/Makefile
@@ -19,7 +19,8 @@ USER_OBJ = \
    $(OBJ)/translator_impl$(OBJ_SUFF) \
    $(OBJ)/source_translator_impl$(OBJ_SUFF) \
    $(OBJ)/code_impl$(OBJ_SUFF) \
-   $(OBJ)/bytecode_translator_impl$(OBJ_SUFF)
+   $(OBJ)/bytecode_translator_impl$(OBJ_SUFF) \
+   $(OBJ)/native$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
@@ -31,3 +32,6 @@ all: $(MATHVM)
 
 $(MATHVM): $(OUT) $(USER_OBJ) $(MATHVM_OBJ)
 	$(CXX) -o $@ $(USER_OBJ) $(MATHVM_OBJ) $(LIBS)
+
+$(OBJ)/native$(OBJ_SUFF): native.S
+	$(CXX) -c native.S -o $(OBJ)/native$(OBJ_SUFF)
